fix: overflow and email

--- a/src/components/contact-section/contact-section.module.css
+++ b/src/components/contact-section/contact-section.module.css
@@ -171,7 +171,7 @@
 
   .title {
     text-align: center;
-    font-size: 32px;
+    font-size: 28px;
   }
 
   .text {
