--- a/src/components/stack-section/stack-section.module.css
+++ b/src/components/stack-section/stack-section.module.css
@@ -59,7 +59,7 @@
 
   .title {
     text-align: center;
-    font-size: 32px;
+    font-size: 28px;
   }
 
   .text {
